--- a/style.css
+++ b/style.css
@@ -1,15 +1,43 @@
+html, body{
+	height:100%;
+	}
+	
+h1{
+	font-size:3em;
+	font-weight:bold;
+	padding: 1em;
+}
+
+h2{
+	font-size:2em;
+	font-style:italic;
+}
+
 #user_input{
 	background-color:#E86731;
 	color:white;
 	margin:auto;
 	text-align:center;
+	min-height: 100%;
 }
 
 form{
 	display:inline-block;
 	text-align:left;
+	padding-top: 100px;
 	}
 	
 	form p{
 		padding-bottom: 3em;
+	}
+
+	input, button{
+		height:30px;
+		}
+	
+	#submit{
+	width:100%;
+	font-size:1.5em;
+	height:2em;
+	
 	}
